@@ -1,4 +1,6 @@
-DIST subsonic-4.4-src.zip 8214761 RMD160 fbadab0031221c7a20ff56b526ce6f63a9d79c7b SHA1 f27c30bfa6934c086f1ecce7cef2620564f26598 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229
-EBUILD subsonic-4.4.ebuild 1965 RMD160 a8ef4e2eb0afcf249f23eda82518ba6b3cd24884 SHA1 40ce445b9c94e68e88b00579f28c73a8843447bc SHA256 2bdc02a0088f492971a1b35d15d2b5d89f3a53f812caf51ad0f3597a1a48e86b
-MISC ChangeLog 1069 RMD160 c7d379502e0821875248839eedfe64204951bab3 SHA1 3be665806718a55ab034ff834ade45e267375654 SHA256 1ea300b22b9a3fa90714e7dd3af4232defd9707a7da74629dce4cb3d5fe32f4a
-MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
+DIST subsonic-4.4-src.zip 8214761 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229 SHA512 305e095e9597df5e3a4d347243ac7a7b002401eecec039f36467753a5a273d5bdd3b91a7bd3220247ad2cfe5d949da0678fdc5851df1ee75dc0938a92a3849d6 WHIRLPOOL 5495cc4942d39ee78036aa92db0f9a72090f8a42f3b3816f10ac184aa0dbb7b7f9759fe8fd5c3b9df4035ea7e8b1566e8f0a7d7be49de6e84b33eaf0de64f0d9
+DIST subsonic-4.6-src.zip 8010674 SHA256 4aa06c7886651a2506ad8cc1c65fe5ba89a9e6bc96810843b914e30128b5a6e1 SHA512 81d423c074a6c9d6c72d01f0379477ae001364f5dbdfddd8ffbc2b6aa014d99b5c99fc5af124208d45f6d7cc438dde87ca488468f4671701fd0c6e6cde75cf90 WHIRLPOOL ef3fb7a025d11b29ee511b350ee68c634c418927a7eb8866a2f3c1c106cdd76f9458711267bd7df3c0d247d1369166eef8babbaf7e466794fbc947e2718d43e0
+EBUILD subsonic-4.4.ebuild 1965 SHA256 2bdc02a0088f492971a1b35d15d2b5d89f3a53f812caf51ad0f3597a1a48e86b SHA512 ad25261b5fdafe2ad4b7bf7c803219226c4780a313b08f85a21758497a3040c51768826ac6390f11e81f884355a0d4782c99a9bdfa9d30bfe9ff51dbebda8ca5 WHIRLPOOL 017f3605c210bea08661f40d45777a35b91609c6d5654b386c0ca35807fc97991f3ed53c34379c9561a0aeba6f5999b3231f42139fee2bc81429c716933cd4e5
+EBUILD subsonic-4.6.ebuild 1953 SHA256 0226aa464497c57ab4fee81cdb69c0f094b328eca7a227243393f1c0711acd3f SHA512 01d4c35313b341c4e5e2ed25a5b163fa5fc33dd1261a4e10dfc5c2e267c0ca4ab76f003ff4ec5171c5eb127be8aa1ca172989e0fecbd9d56619c59ea64fbcf64 WHIRLPOOL a7b86de5581fdef419737ffaf399568205ec0373f8c81589dd7fec0de065353551cf1cd45fa23aa7a6a0f08873bb03522b48cc0ead7e45280edf0381141f00af
+MISC ChangeLog 1188 SHA256 42dd9899aeca98e4879458e2a096eafedc176aa1b2fddffa9100fa1b3dea86ee SHA512 27ccee60f848c0cadf3f193c1cefaf423178ac68c159d150a4980482e2d4b5733e1661edd5474ecb1fdb4d0f70353a3f081ab1123a0c5b716feaae7460e5086c WHIRLPOOL 34c9bc988816346ef14d1dafbdf7144d43b15e908aadaf95dcfc2f6e460377f0a703f8667620541e474d4ecb561c15133182c347921725840a7208f5e743c749
+MISC metadata.xml 221 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616 SHA512 b607c38c92a21847175d4f90e6990d5ba2ac4d035cc0c2ece4f63547d778ca328e41b783a82db683d11abefbc1771ccb224a01cf717b5f872ce08e6072a4e341 WHIRLPOOL 78ff30cc7bfa452affef769ae63570c6181d29d0ade8be0d4b133957de1ee46fa0450c21f0e083fcddcae2cb29d5cb3c4e08ffb307de95c3898d59890f0d2acc
